Got the 5x5 layout generating properly. The permalink is currently broken for 5x5, most likely because the layout bitmask is too big Still need to fix css for 5x5

--- a/css/burgle.css
+++ b/css/burgle.css
@@ -35,6 +35,12 @@ a, a:visited, a:hover {
 	height: 4%
 }
 
+.floor td.shaft {
+    width: 18%;
+    height: 18%;
+    background: #000;
+}
+
 .floor td.tile {
 	width: 22%;
 	height: 22%;
